--- a/app/assets/stylesheets/pages/_chat.scss
+++ b/app/assets/stylesheets/pages/_chat.scss
@@ -63,6 +63,7 @@ body {
   display: flex;
   flex-direction: column;
   width: calc(100% - 290px);
+  background-color: white;
   i {
     font-style: normal;
     font-weight: 600;
